--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 <body>
   <div id="app">
   </div>
+  <% if(process.env.NODE_ENV === 'production') { %>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <% } %>
   <script type="text/javascript" src="app.bundle.js"></script>
 </body>
 </html>
