--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-  <meta charset="utf-8" />
-  <title>Webpack App</title>
-</head>
-<body>
-  <div id="app">
-  </div>
-  <% if(process.env.NODE_ENV === 'production') { %>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-  <% } %>
-  <script type="text/javascript" src="app.bundle.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Webpack App</title>
+  </head>
+  <body>
+    <div id="app" role="main"></div>
+    <% if(process.env.NODE_ENV === 'production') { %>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@17/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+    ></script>
+    <% } %>
+    <script type="text/javascript" src="app.bundle.js"></script>
+  </body>
 </html>
